<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TMDB Trending"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/headerText" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <include layout="@layout/shimmer_layout" />


    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/errorOuterLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/error_image"
            android:src="@drawable/error_image"
            android:layout_width="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_height="250dp" />

        <TextView
            android:id="@+id/someThingWentWrong"
            android:textSize="24sp"
            android:textColor="#000"
            android:text="@string/something_went_wrong"
            app:layout_constraintStart_toStartOf="@id/error_image"
            app:layout_constraintEnd_toEndOf="@id/error_image"
            app:layout_constraintTop_toBottomOf="@id/error_image"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/errorText"
            android:textColor="@color/darkGrey"
            android:gravity="center"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/someThingWentWrong"
            app:layout_constraintEnd_toEndOf="@id/someThingWentWrong"
            app:layout_constraintTop_toBottomOf="@id/someThingWentWrong"
            android:layout_marginTop="20dp"
            android:text="@string/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/retryButton"
            android:text="Retry"
            android:textColor="#fff"
            android:background="#5C6AC4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="@id/errorText"
            app:layout_constraintEnd_toEndOf="@id/errorText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>